API Calls, Error Messages display.
Calling API's to stored clients message in Database, Installed flash message services NPM to display flash error messages .

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
 <h2 style="text-align:center">Let us Call you. Send your contact Info.</h2>
 <fieldset style="width:525px; border-radius: 5px;margin: auto">
   <form [formGroup]="messageForm">
+    <flash-messages style="color:red; text-align:center"></flash-messages>
     <input formControlName="_firstName"class="textfields1" type="text" placeholder="First Name">
     <input formControlName="_lastName" class="textfields" type="text" placeholder="Last Name">
     <input formControlName="_phoneNumber" class="textfields1" type="text" placeholder="Phone Number">
