Added Styles to the page.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
   </form>
 </fieldset>
 <ul class="nav1">
-<h5>Current Location: {{CurrentLocation}}, Temparature: {{Temp}}Kelvin, Pressure: {{pressure}}hPa, Humidity: {{Humidity}}%</h5>
+<h5>Your Location: {{CurrentLocation}}, Temparature: {{Temp}}Kelvin, Pressure: {{pressure}}hPa, Humidity: {{Humidity}}%</h5>
+<h5>Company HQ: 2055 Peel, suite 260, Montreal, Québec H3A 1V4</h5>
 </ul>
 
