--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,10 @@
 .button{
-    width: auto;
+    width: 130px;
     height: 40px;
     background-color: rgb(37, 20, 184);
-    border-radius: 5px;
+    border-radius: 8px;
+    border-bottom: 2px;
+    border-right: 2px;
     margin: 5px;
     color: white;
     border-color: rgb(37, 20, 184);
@@ -21,12 +23,16 @@
     width:250px;
     border-radius: 5px;
 }
+textarea{
+    border-radius: 5px;
+}
 .nav{
     background-color: #595959;
     color:#ffffff;
     list-style: none;
     text-align: center;
-    padding:20px 0 20px 0;    
+    padding:20px 0 20px 0;   
+    margin-top: 0px; 
 }
 .nav>li{
     display: inline-block;
@@ -46,4 +52,5 @@
     list-style: none;
     text-align: center;
     padding:1px 0 1px 0;
+    margin-bottom: 0px;
 }
