Added styles on page.

--- a/Angular2Client/src/app/app.component.html
+++ b/Angular2Client/src/app/app.component.html
@@ -6,7 +6,7 @@
   <li><a href="https://www.expertus.ca/request-a-demo/">Request Demo</a></li>
 </ul>
 <div style="text-align:center">
-  <img src="../assets/Expertuslogo.png">
+  <img style="height:350px; width:1250px;" src="https://www.expertus.ca/wp-content/uploads/2017/08/expertus_banner.jpg">
 </div>
 <div style="text-align:center">
   <h1>
@@ -39,7 +39,11 @@
   </form>
 </fieldset>
 <ul class="nav1">
-<h5>Your Location: {{CurrentLocation}}, Temparature: {{Temp}}Kelvin, Pressure: {{pressure}}hPa, Humidity: {{Humidity}}%</h5>
-<h3>Company HQ: 2055 Peel, suite 260, Montreal, Québec H3A 1V4</h3>
+<h5 style="margin-bottom:-15px;">Your Location: {{CurrentLocation}}, Temparature: {{Temp}}Kelvin, Pressure: {{pressure}}hPa, Humidity: {{Humidity}}%</h5>
+<h3 style="margin-bottom:-10px;">Company HQ: 2055 Peel, suite 260, Montreal, Québec H3A 1V4</h3>
+<div>
+<h3>Follow us:<a href="https://www.facebook.com/expertustechnologies/" target="_blank"> <img style="width: 20px; height:20px; margin-right: 20px; margin-left:20px;" src="https://www.expertus.ca/wp-content/uploads/2016/06/expertus_facebook.png"></a>
+<a href="https://www.linkedin.com/company/264605/" target="_blank"> <img style="width: 20px; height:20px; margin-right: 20px;" src="https://www.expertus.ca/wp-content/uploads/2016/06/expertus_linkedin.png"></a></h3>
+</div>
 </ul>
 
